2006-04-11 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/*.c,
	* device/include/pic/*.h: replaced sfr and data with __sfr and __data,
	  fixes #1468739, enables compilation in --std-c99 mode
	* support/scripts/inc2h.pl: emit __sfr/__data instead of sfr/data

2006-04-11 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (find_device): removed debug output
	  (list_valid_pics): enabled verbose listing of supported devices
	* device/include/stdbool.h: define bool as char for pic14/16 as well

2006-04-07 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCC.y: allow using brackets here: "__interrupt (1) __using (1)"

2006-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version: bumped version to 2.5.6
	* src/pic/ralloc.c (newReg): MSVC doesn't support __builtin_return_address

2006-04-06 Raphael Neider <rneider AT web.de>

	* .version: bumped version to 2.5.6 (pic14 ABI changed)
	* src/SDCCmain.c: add -DSDCC_PROCESSOR=<id> for pic14 port
	* src/pic/glue.c (emitSymbolToFile,pic14_constructAbsMap,
	  pic14emitRegularMap,pic14emitMaps): moved output for absolute symbols to
	    pic14_constructAbsMap
	  (pic14printPublics): declare absolute global symbols as global
	  (pic14createInterruptVect),
	* src/pic/ralloc.c (IS_CONFIG_ADDRESS): support second config word,
	  (newReg): assume new registers unused, use correct name in
	    hashtable (reg->name instead of name), more debugLog output
	* src/pic/device.h (PIC_device): added fields for verbose output
	* src/pic/device.c: moved device definition to pic14devices.txt,
	    added routines for runtime parsing of pic14devices.txt,
	    added support for second config word
	* src/pic/main.c (_process_pragma): removed #pragma maxram,
	  (_pic14_keywords): no longer accept "bit" and "sbit" keywords
	  (_pic14_initPaths): add search paths with "pic" suffix (not "pic14")
	  (_pic14_parseOptions): moved pCodeInitRegisters here
	  (_pic14_do_link): add "pic$(ARCH).lib" to linker arguments